upgraded editor and added bullet points

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "cra-template": "1.2.0",
     "firebase": "^11.1.0",
     "react": "^19.0.0",
